main.css
* {
    box-sizing: border-box;
}
body {
    font-family: 'Poppins', sans-serif;
    padding: 2em;
    background-color: #e9faff;

}
nav {
    width: 95vw;
    text-align: center;
    font-size: 2em;
    padding: 0.5em;
    margin: 0 auto;
    border: 1px solid grey;
}
#output-field {
    padding: 2em;
}
table, thead, tbody, th, tr, td {
    font-size: 1.1em;
    border: 1px solid grey;
    border-collapse: collapse;
}
#table-field {
    display: flex;
    justify-content: center;
    align-items: center;
}
table {
    margin-top: 5em;
    width: 50vw;
}
#Hé, #Ke, #Sze, #Csüt, #Pén, #Szo, #Vas {
    border: 2px solid black;
    border-radius: 18px; 
}
#arthistory-time, #choir-time, #chamber1-time, #guitar-time, #zir-time, #acoustics-time, #guitar-time, #szolf-time, #guitarorch-time, #prog-time, #swim-time {
    border-left: 2px solid black;
}
#choir-lesson, #chamber1-lesson, #guitar-lesson, #zir-lesson, #acoustics-lesson, #guitar2-lesson, #szolf-lesson, #guitarorch-lesson, #prog-lesson, #swim-itself {
    border-right: 2px solid black;
}
@media (max-width: 425px) {
nav {
    width: 100vw;
    font-size: 1.2em;
    padding: 0.2em;
  }
#table-field {
    display:block;
    overflow-x: scroll;
    max-width: 99vw;
  }
  table {
    width: 99vw;
  }
body {
    overflow-y: hidden;
  }
}
@media (max-width: 768px){
    body {
        overflow-y: hidden;
    }
    nav {
        width: 100vw;
    }
    #table-field {
        display: block;
        overflow-x: scroll;
        width: 99vw;
      }
}

